web front-end - QuestionForm width increased to avoid horizontal scroll

--- a/excelanalysisai.web.client/src/index.scss
+++ b/excelanalysisai.web.client/src/index.scss
@@ -17,7 +17,7 @@ body {
 // QuestionForm specific styles with nesting
 .question-form {
 	&-card {
-		max-width: 650px;
+		max-width: 800px;
 		min-width: 450px;
 	}
 
